# ngmlr

./: .gitignore  .travis.yml  AlignmentDispatcher.cpp  BamParser.h  Buffer.h  CMakeLists.txt  CS.cpp  CS.h  Config.h  Debug.cpp  Debug.h  DefaultConfig.h  FFormatWriter.h  FastxParser.h  GenericReadWriter.h  IAlignment.h  INSTALL  IRefProvider.h  LICENSE  MappedRead.h  NGM.cpp  NGM.h  NGMTask.h  NGM_main.cpp  Options.h  Output.cpp  Output.h  README  README.md  README.txt  ReadProvider.h  ReadStatus.h  SW.cpp  SW.h  SamParser.h  SequenceProvider.cpp  SequenceProvider.h  Tests.h  Types.h  kseq.h  (+4 more)
cmake/.svn/: all-wcprops  entries
cmake/modules/: FindBamtools.cmake  FindOpenCL.cmake
cmake/modules/.svn/: all-wcprops  entries
docker/build-env/: Dockerfile
docker/ngmlr/: Dockerfile
docker/ngmlr/hooks/: build
include/: IAlignment.h  IConfig.h  ILog.h  Timing.h
lib/Complete-Striped-Smith-Waterman-Library/src/: ssw.c  ssw.h
lib/bamtools/: CMakeLists.txt
lib/bamtools-2.2.3/src/api/: CMakeLists.txt
lib/bamtools-2.2.3/src/toolkit/: bamtools_version.h
lib/bamtools-2.3.0/: CMakeLists.txt
lib/bamtools/src/api/: CMakeLists.txt
lib/intervaltree/: IntervalTree.h
lib/libStatGen-1.0.8/: CMakeLists.txt
lib/libStatGen-1.0.9/: CMakeLists.txt  LibStatGen.1.0.9.tgz
lib/mason/: CMakeLists.txt
lib/mason/opencl/: CMakeLists.txt  OclHost.cpp  OclHost.h  SWOcl.cpp  SWOcl.h  SWOclAlignment.cpp  SWOclAlignment.h  SWOclCigar.cpp  SWOclCigar.h  SWOcl_export.cpp  Timer.cpp  Timer.h
lib/mason/opencl/opencl/: oclDefines.cl  oclEndFreeScore.cl  oclSwAlignment.cl  oclSwCigar.cl  oclSwScore.cl
lib/mason/opencl/tools/: CMakeLists.txt  oclTool.cpp
lib/minimap/: CMakeLists.txt  Makefile  README.md  _kseq.h  bseq.c  example.c  index.c  kdq.h  main.c  map.c  minimap.1  minimap.h  sdust.c
lib/seqan-library-1.4.1/share/doc/seqan/html/: ADAPTION.char+array.html  ADAPTION.std_3a_3a_F_I_L_E+_2a.html  ADAPTION.std_3a_3abasic__string.html  ADAPTION.std_3a_3aiostream.html  ADAPTION.std_3a_3alist.html  ADAPTION.std_3a_3avector.html  ADAPTION_F_I_L_E+_2a.html  ADAPTION_File+stream.html  ADAPTION_I_O+stream.html  CLASS_A_F_Score.html  CLASS_Accumulator.html  CLASS_Align.html  CLASS_Align_Cols.html  CLASS_Align_Config.html  CLASS_Align_Quality_Store_Element.html  CLASS_Aligned_Read_Layout.html  CLASS_Aligned_Read_Store_Element.html  CLASS_Allocator.html  CLASS_Annotation_Store_Element.html  CLASS_Arg_Parse_Argument.html  CLASS_Arg_Parse_Option.html  CLASS_Argument_Parser.html  CLASS_Async_Request.html  CLASS_Auto_Seq_Format.html  CLASS_Bam_Alignment_Record.html  CLASS_Bam_Header.html  CLASS_Bam_Header_Record.html  CLASS_Bam_I_O_Context.html  CLASS_Bam_Index.html  CLASS_Bam_Stream.html  CLASS_Bam_Tags_Dict.html  CLASS_Bed_I_O_Context.html  CLASS_Bed_Record.html  CLASS_Bed_Rgb.html  CLASS_Bed_Stream.html  CLASS_Bundle2.html  CLASS_Bundle3.html  CLASS_Bundle5.html  CLASS_Cigar_Element.html  CLASS_Compressed_S_A.html  (+2362 more)
lib/seqan-library-2.2.0/share/doc/seqan/html/: class_AFScore.html  class_Accumulator.html  class_Align.html  class_AlignCols.html  class_AlignConfig.html  class_AlignQualityStoreElement.html  class_AlignTraceback.html  class_AlignedReadLayout.html  class_AlignedReadStoreElement.html  class_AlignmentStats.html  class_Allocator.html  class_AlphabetExpansion.html  class_AnnotationStoreElement.html  class_ArgParseArgument.html  class_ArgumentParser.html  class_AsyncRequest.html  class_BadAlloc.html  class_BadCast.html  class_BamAlignmentRecord.html  class_BamHeader.html  class_BamHeaderRecord.html  class_BamIOContext.html  class_BamIndex.html  class_BamTagsDict.html  class_BedRecord.html  class_BedRgb.html  class_BetaDistribution.html  class_BidirectionalIndex.html  class_BlastIOContext.html  class_BlastMatch.html  (+761 more)
lib/seqan-library-2.2.0/share/pkgconfig/: seqan-2.pc
lib/sse2neon/: emmintrin.h
lib/zlib-1.2.7/: CMakeLists.txt
opencl-sdk/: CMakeLists.txt
opencl-sdk/x86_64/: libOpenCL.so.1
src/: .gitignore  AlignmentBuffer.cpp  AlignmentBuffer.h  AlignmentDispatcher.cpp  AlignmentMatrix.cpp  AlignmentMatrix.h  AlignmentMatrixFast.cpp  AlignmentMatrixFast.h  ArgParseOutput.h  ArgParser.cpp  ArgParser.h  BAMWriter.cpp  BAMWriter.h  BamParser.cpp  BamParser.h  BitpalAligner.cpp  BitpalAligner.h  CMakeLists.txt  CS.cpp  CS.h  CSstatic.cpp  ConvexAlign.cpp  ConvexAlign.h  ConvexAlignFast.cpp  ConvexAlignFast.h  EndToEndAffine.cpp  EndToEndAffine.h  FastxParser.h  FileWriter.h  FileWriterBam.h  GZFileWriter.h  GenericReadWriter.h  IAlignment.h  IConfig.h  ILog.h  IParser.h  IReadProvider.h  IRefProvider.h  LinearRegression.cpp  LinearRegression.h  (+56 more)
src/config/: Config.cpp  Config.h  Options.h
src/core/: Buffer.cpp  NGMStats.cpp  NGMStats.h  NGMTask.cpp  PlatformSpecifics.h  Types.h  unix.cpp
src/log/: Log.h  Logging.cpp
src/misc/: LinearRegression.h  Timing.h
src/old/: Aligner.h  AlignmentDispatcher.cpp  SW.cpp
src/parser/: BamParser.cpp  BamParser.h  FastxParser.h  IParser.h  SamParser.cpp  SamParser.h  SimpleBamParser.h  VcfParser.cpp  VcfParser.h
src/seqan/: EndToEndAffine.cpp  EndToEndAffine.h
src/writer/: BAMWriter.cpp  BAMWriter.h  FFormatWriter.cpp  FFormatWriter.h  FileWriter.h  FileWriterBam.h  GZFileWriter.h  GenericReadWriter.h  PlainFileWriter.h  SAMWriter.cpp  SAMWriter.h  ScoreWriter.cpp  ScoreWriter.h  SplitScoreWriter.cpp  SplitScoreWriter.h
test/: test_1.sh  test_2.sh  test_3.sh  test_4.sh  test_5.sh  test_6.sh  test_travis.sh
test/data/test_1/: expected.txt  long_name.fa  ref_chr6_140kb.fa
test/data/test_2/: reads_100_2200bp.fa  ref_chr21_20kb.fa  result.bed
test/data/test_3/: expected.bed
test/data/test_4/: expected.txt
utils/: CMakeLists.txt  main.cpp
utils/cout_reads/: cout-reads.cpp  cout-reads.h  cout_reads.cpp
utils/filter/: filter.cpp  filter.h
utils/kmers/: kmer-distribution.cpp  kmer-distribution.h
utils/paired/: CMakeLists.txt  Writer.cpp  Writer.h  interleave-pairs.cpp  interleave-pairs.h  main.cpp
utils/reformat_fasta/: reformat_fasta.cpp  reformat_fasta.h
utils/writer/: FastqWriter.cpp  FastqWriter.h  Writer.cpp  Writer.h
(+4 files in other folders)
